// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSecondary render matches latest snapshot 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#3c4d9d1a",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="Add"
    style={
      {
        "height": 16,
        "marginRight": 8,
        "width": 16,
      }
    }
    width={16}
  />
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "CentraNo1-Medium",
        "fontSize": 16,
        "fontWeight": "500",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    Sample label
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="AddSquare"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</TouchableOpacity>
`;

exports[`ButtonSecondary should render correctly 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#3c4d9d1a",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="Bank"
    style={
      {
        "height": 16,
        "marginRight": 8,
        "width": 16,
      }
    }
    width={16}
  />
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "CentraNo1-Medium",
        "fontSize": 16,
        "fontWeight": "500",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    Click me!
  </Text>
</TouchableOpacity>
`;
